deployment3.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  labels: 
    app: demo
  name: demo
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      app: demo
  strategy: 
    rollingUpdate: 
      maxSurge: 10
      maxUnavailable: 10
  template: 
    metadata: 
      annotations: 
        appVersion: v1.4
      labels: 
        app: demo
    spec: 
      containers: 
        - 
          image: go_server
          imagePullPolicy: IfNotPresent
          name: demo
          readinessProbe: 
            httpGet: 
              path: api
              port: 1323
