service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo
spec:
  ports:
  - name: web
    port: 1323
    protocol: TCP
    targetPort: 1323
  selector:
    app: demo
  type: NodePort
